[package]
name = "beancount"
version = "0.1.0"
authors = ["chenxin"]
edition = "2018"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { git="https://github.com/lalrpop/lalrpop" }
regex = "1"
chrono = "0.4.19"
strum = { version = "0.19", features = ["derive"] }
strum_macros = "0.19.4"
snailquote = "0.3.0"

[build-dependencies]
lalrpop = {git="https://github.com/lalrpop/lalrpop", features=["lexer"]}
